2011-02-14 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/mod_rivet.c: Only create root interpreter once, not twice.  In Rivet_CopyConfig cache_size and cache_free were getting copied twice.  Only once now.
    * src/apache-2/rivetCore.c: Remove unused command var from Rivet_Upload.  Remove unneeded loglevel var from Rivet_LogErrorCmd.

2011-02-11 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[c|h]: new conf scripts rivet_abort_script and rivet_force_script. rivet_abort_script
    is run when an abort_page command is called in the page content generation
    * src/apache-2/rivetCode.c: add new command abort_code that returns the code passed to abort_page

2011-01-31 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: default value for directive SeparateVirtualInterps changed to 'yes'.
    * VERSION: version number set as 2.1.0r1 ('r' is for 'revision')
    * doc/xml/directives.xml: New directive ServerInitScript is documented.

2011-01-23 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[c|h]: Created new ServerInitScript configuration directive: it assigns 
    rivet_server_init_script with a script run in Rivet_InitHandler after configuration has been built and
    before server children are forked. A master interpreter is created in Rivet_InitHandler. Children
    interpreters should hopefully be pure clones of this interpreter created by 'fork'

2011-01-09 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: fixed AC_DEFINE_UNQUOTED macro call for definition of proprocessor symbol RIVET_MAX_POST, 
    an integer valued symbol which was put in quotation marks. File indentation was fixed and tabs replaced with spaces

2010-12-03 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: new macros to set default values of configuration parameters.
    * src/apache-2/mod_rivet.c,mod_rivet.h: Default values are set in rivet_config.h through autotools. The Tcl